myteo/test/parser/ast/literals/invalid_bin_int.myte
module test

fun main() {
  0b12;
}